design collection endpoints
